@@ -1,3 +1,14 @@
+2024-05-12  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-local-host-regexp): Add OpenSUSE host names.
+
+	* tramp-compat.el (tramp-nspawn): Warn, if that package is used.
+
+	* tramp-container.el (tramp-nspawn-program): New defcustom.
+	(tramp-nspawn-method): New defconst.
+	(tramp-nspawn--completion-function, tramp-enable-nspawn-method):
+	New defuns.
+
 2024-05-11  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-enable-run0-method): New defun.
